--- a/index.html
+++ b/index.html
@@ -564,33 +564,44 @@ footer{border-top:1px solid var(--br);padding:24px clamp(20px,5vw,64px);display:
   <h2 class="wl-h">The waitlist is open.<br><em>Don't fall behind.</em></h2>
   <p class="wl-sub">Early students get priority onboarding and shape the product.<br>No spam. Just a better way to study.</p>
   <form
-  class="wl-form"
-  action="https://formspree.io/f/mwvnzdzo"
-  method="POST"
->
-  <input
-    class="wl-inp"
-    type="text"
-    name="name"
-    placeholder="Your name"
-    id="wl1-name"
-    autocomplete="name"
+    class="wl-form"
+    action="https://formspree.io/f/mwvnzdzo"
+    method="POST"
+    id="wl-form"
   >
+    <input
+      class="wl-inp"
+      type="text"
+      name="name"
+      placeholder="Your name"
+      id="wl1-name"
+      autocomplete="name"
+      required
+    />
 
-  <input
-    class="wl-inp"
-    type="email"
-    name="email"
-    placeholder="you@university.edu"
-    id="wl1-email"
-    autocomplete="email"
-    required
-  >
+    <input
+      class="wl-inp"
+      type="email"
+      name="email"
+      placeholder="you@university.edu"
+      id="wl1-email"
+      autocomplete="email"
+      required
+    />
 
-  <button class="wl-btn" type="submit">
-    Reserve my spot
-  </button>
-</form>
+    <button class="wl-btn" type="submit" id="wl-submit">
+      Reserve my spot
+    </button>
+
+    <!-- Messages -->
+    <p class="wl-success" id="wl-success" style="display:none;">
+      ✅ You're on the waitlist!
+    </p>
+    <p class="wl-error" id="wl-error" style="display:none;">
+      ❌ Something went wrong. Please try again.
+    </p>
+  </form>
+
 </section>
 
 <!-- ══ LAYER 1: COURSES ══ -->
@@ -971,34 +982,45 @@ footer{border-top:1px solid var(--br);padding:24px clamp(20px,5vw,64px);display:
 <section class="final-cta reveal" id="final">
   <h2 class="final-h">Your best semester<br>starts <em>right now.</em></h2>
   <p class="final-sub">Join the waitlist. Shape the product. Study better from day one.</p>
-    <form
-      class="wl-form"
-      action="https://formspree.io/f/mwvnzdzo"
-      method="POST"
-    >
-      <input
-        class="wl-inp"
-        type="text"
-        name="name"
-        placeholder="Your name"
-        id="wl1-name"
-        autocomplete="name"
-      >
-    
-      <input
-        class="wl-inp"
-        type="email"
-        name="email"
-        placeholder="you@university.edu"
-        id="wl1-email"
-        autocomplete="email"
-        required
-      >
-    
-      <button class="wl-btn" type="submit">
-        Reserve my spot
-      </button>
-    </form>
+  <form
+    class="wl-form"
+    action="https://formspree.io/f/mwvnzdzo"
+    method="POST"
+    id="wl-form"
+  >
+    <input
+      class="wl-inp"
+      type="text"
+      name="name"
+      placeholder="Your name"
+      id="wl1-name"
+      autocomplete="name"
+      required
+    />
+
+    <input
+      class="wl-inp"
+      type="email"
+      name="email"
+      placeholder="you@university.edu"
+      id="wl1-email"
+      autocomplete="email"
+      required
+    />
+
+    <button class="wl-btn" type="submit" id="wl-submit">
+      Reserve my spot
+    </button>
+
+    <!-- Messages -->
+    <p class="wl-success" id="wl-success" style="display:none;">
+      ✅ You're on the waitlist!
+    </p>
+    <p class="wl-error" id="wl-error" style="display:none;">
+      ❌ Something went wrong. Please try again.
+    </p>
+  </form>
+
 </section>
 
 <!-- ══ FOOTER ══ -->
@@ -1184,7 +1206,50 @@ const numObs=new IntersectionObserver(entries=>{
     }
   });
 },{threshold:.3});
-nums.forEach(n=>numObs.observe(n));
+nums.forEach(n=>numObs.observe(n));   
+
+/* ── (prevents redirect + submits with fetch) ── */
+    (function () {
+      const form = document.getElementById("wl-form");
+      const btn = document.getElementById("wl-submit");
+      const successMsg = document.getElementById("wl-success");
+      const errorMsg = document.getElementById("wl-error");
+
+      form.addEventListener("submit", async function (e) {
+        e.preventDefault(); // stop redirect
+
+        successMsg.style.display = "none";
+        errorMsg.style.display = "none";
+
+        // simple loading state
+        const oldText = btn.textContent;
+        btn.disabled = true;
+        btn.textContent = "Submitting...";
+
+        try {
+          const data = new FormData(form);
+
+          const res = await fetch(form.action, {
+            method: "POST",
+            body: data,
+            headers: { "Accept": "application/json" }
+          });
+
+          if (res.ok) {
+            form.reset();
+            successMsg.style.display = "block";
+          } else {
+            errorMsg.style.display = "block";
+          }
+        } catch (err) {
+          errorMsg.style.display = "block";
+        } finally {
+          btn.disabled = false;
+          btn.textContent = oldText;
+        }
+      });
+    })();
+
 </script>
 </body>
 </html>
