Add color styling to success and error messages
Updated success and error message paragraphs to include color styling.

--- a/index.html
+++ b/index.html
@@ -594,10 +594,10 @@ footer{border-top:1px solid var(--br);padding:24px clamp(20px,5vw,64px);display:
     </button>
 
     <!-- Messages -->
-    <p class="wl-success" id="wl-success" style="display:none;">
+    <p class="wl-success" id="wl-success" style="display:none; color:white;">
       ✅ You're on the waitlist!
     </p>
-    <p class="wl-error" id="wl-error" style="display:none;">
+    <p class="wl-error" id="wl-error" style="display:none; color:white;">
       ❌ Something went wrong. Please try again.
     </p>
   </form>
@@ -1013,10 +1013,10 @@ footer{border-top:1px solid var(--br);padding:24px clamp(20px,5vw,64px);display:
     </button>
 
     <!-- Messages -->
-    <p class="wl-success" id="wl-success" style="display:none;">
+    <p class="wl-success" id="wl-success" style="display:none; color:white;">
       ✅ You're on the waitlist!
     </p>
-    <p class="wl-error" id="wl-error" style="display:none;">
+    <p class="wl-error" id="wl-error" style="display:none; color:white;">
       ❌ Something went wrong. Please try again.
     </p>
   </form>
